# app-boilerplate-rust

./: .git-blame-ignore-revs  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  apdu_echo.sh  build.rs  dev.sh  fix_echohash.py  img2rs.py  ledger_app.toml  main.py  mypy.ini  nanos.json  script.ld
.cargo/: config  config.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build_and_functional_tests.yml  build_with_nightly.yml  coding_style_checks.yml  guidelines_enforcer.yml  misspellings_checks.yml  python_tests_checks.yml  release.yml  reusable_build_and_functional_tests.yml  rust.yml
docs/: COMMANDS.md
src/: consts.rs  crypto_helpers.rs  grid.rs  info.rs  logos.rs  main.rs  main.rs.bak  settings.rs  snake.rs  swap.rs  utils.rs
src/app_ui/: address.rs  menu.rs  sign.rs
src/cashnotes/: mod.rs  nano.rs  reason_hash.rs  spend.rs  transaction.rs
src/cfx_addr/: consts.rs  mod.rs  types.rs  utils.rs
src/handlers/: get_public_key.rs  get_version.rs  multifield_review_with_newline.rs  personal_sign.rs  sign_tx.rs
src/types/: transaction.rs
test/: overflow.apdu  quit.apdu  sign.apdu  test_cmds.py
tests/: conftest.py  requirements.txt  setup.cfg  test_app_mainmenu.py  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_version_cmd.py  usage.md
tests/application_client/: boilerplate_command_sender.py  boilerplate_response_unpacker.py  boilerplate_transaction.py  boilerplate_utils.py  command_sender.py  response_unpacker.py  transaction.py  utils.py
tests/standalone/: boil-freeze.txt  conftest.py  test_app_mainmenu.py  test_appname_cmd.py  test_error_cmd.py  test_name_version.py  test_pubkey_cmd.py  test_sign_cmd.py  test_version_cmd.py
tests/swap/: README.md  _helper_tool.py  cal_helper.py  conftest.py  test_boilerplate.py
tools/: get_target_id.py
