[package]
name = "app-conflux"
version = "0.1.0"
authors = ["Pana"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.18.1"
include_gif = "1.2.0"
serde = {version="1.0.192", default-features = false, features = ["derive"]}
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core"}
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
ethereum-types = { version = "0.15.1", default-features = false, features = ["rlp"] }
rlp = { version = "0.6.1", default-features = false, features = ["derive"] }
bytes = { version = "1.8.0", default-features = false, features = [] }
rustc-hex = { version = "2.1.0", default-features = false }

[profile.release]
opt-level = 'z'
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[features]
default = ["pending_review_screen"]
pending_review_screen = []

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/503'"]
name = "Conflux"

[package.metadata.ledger.nanox]
icon = "icons/cfx_14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/cfx_14.gif"

[package.metadata.ledger.stax]
icon = "icons/cfx_32.gif"

[package.metadata.ledger.flex]
icon = "icons/cfx_40.gif"
