[package]
name = "app-boilerplate-rust"
version = "1.7.7"
authors = ["Ledger"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.*"
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
arrayvec = { version = "0.7", default-features = false }

[build-dependencies]
image = "0.25.7"

[features]
default = ["ledger_device_sdk/nano_nbgl"]
debug = ["ledger_device_sdk/debug"]

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/1'"]
name = "Rust Boilerplate"

[package.metadata.ledger.nanox]
icon = "icons/crab_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/crab_14x14.gif"

[package.metadata.ledger.stax]
icon = "icons/crab_32x32.gif"

[package.metadata.ledger.flex]
icon = "icons/crab_40x40.gif"

[package.metadata.ledger.apex_p]
icon = "icons/crab_32x32.png"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanos", "nanox", "nanosplus"))'] }
